<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/dark_blue"
    android:layout_width="match_parent"
    android:gravity="center"
    android:padding="10dp"
    android:paddingBottom="20dp"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/signUpper"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/sign_upper" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cardView"
        app:cardElevation="20dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/dark_blue"
        app:cardCornerRadius="20dp">
        <LinearLayout
            android:padding="10dp"
            android:background="@drawable/recycler_border"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <TextView
            android:textColor="@color/yellow"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/d_signup"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/text_color"
            android:backgroundTint="@color/yellow"
            android:textColorHint="@color/text_color"
            android:hint="@string/d_name"/>

        <EditText
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:backgroundTint="@color/yellow"
            android:textColorHint="@color/text_color"
            android:hint="@string/d_surname"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                android:inputType="textPassword"
                android:backgroundTint="@color/yellow"
                android:textColorHint="@color/text_color"
                android:hint="@string/d_password2"/>
            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/text_color"
                android:backgroundTint="@color/yellow"
                android:textColorHint="@color/text_color"
                android:hint="@string/d_passConfirmation"/>
            <EditText
                android:id="@+id/date_of_birth"
                android:datePickerMode="spinner"
                android:soundEffectsEnabled="true"
                android:layout_width="match_parent"
                android:inputType="date"
                android:calendarViewShown="false"
                android:layout_height="40dp"
                android:textColor="@color/text_color"
                android:backgroundTint="@color/yellow"
                android:textColorHint="@color/text_color"
                android:hint="@string/d_dateOfBirth"/>
            <EditText
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                android:backgroundTint="@color/yellow"
                android:textColorHint="@color/text_color"
                android:hint="@string/d_gender"/>
            <EditText
                android:id="@+id/marital_status"
                android:layout_width="match_parent"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                android:backgroundTint="@color/yellow"
                android:textColorHint="@color/text_color"
                android:hint="@string/d_status"/>
            <EditText
                android:id="@+id/province"
                android:layout_width="match_parent"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                android:backgroundTint="@color/yellow"
                android:textColorHint="@color/text_color"
                android:hint="@string/d_province"/>
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                android:backgroundTint="@color/yellow"
                android:textColorHint="@color/text_color"
                android:hint="@string/d_email"/>

            <Button
                android:textColor="@color/yellow"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_gredeint"
                android:text="@string/d_signup"/>



        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <ImageView
        android:src="@drawable/sign_down"
        android:scaleType="centerCrop"
        android:layout_width="wrap_content"
        android:layout_height="100dp"/>
</LinearLayout>